# PIXL

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  release-aseprite.yml  release-rust.yml  release-studio.yml
dataset/pixelart/: algorithms-color-quantization.md  algorithms-upscaling.md  animation-intro.md  animation-motion-cycles.md  color-theory-palettes.md  color-theory-relativity.md  dithering-techniques.md  effects-fire-water-smoke.md  fundamentals-anti-aliasing.md  fundamentals-pixel-art-basics.md  history-pixel-art-evolution.md  isometric-pixel-art.md  ml-pixel-art-generation.md  palettes-popular-collections.md  procgen-cellular-sprites.md  procgen-noise-functions.md  procgen-reaction-diffusion.md  procgen-wfc-algorithm.md  procgen-wfc-implementation.md  retro-c64-snes-gba-constraints.md  retro-nes-hardware-constraints.md  shading-light-and-shadow.md  sprites-character-design.md  tilesets-autotiling-bitmask.md  tilesets-classification.md  tilesets-patterns-terrain.md
docs/: feature_parity_report.md  retro-hardware-constraints.md
docs/archive/: KNOWLEDGE_INTEGRATION_PLAN.md  PIXL_STUDIO_PRD.md  pax_vs_pixl_comparison.html  quality_ntc_analysis.html
docs/concept/: PIXL_SPEC.md  cognitive-vault-integration.md  pax-2.1-update.md  pax-plan.md  pax_research_synthesis.html  pixl_architecture.html
docs/guides/: animation-pipeline.md  generation-pipeline.md  local-inference.md  map-generation-training.md  sprite-conversion.md  style-scanner.md
docs/plans/: IMPLEMENTATION_PLAN.md  KNOWLEDGE_INTEGRATION_PLAN.md
docs/research/: blueprint_system.md  diffusion_bridge.md  llm_tile_generation.md  ntc_style_latent.md  pax2_verification.md  skeletal_animation.md  zelda_gba_analysis.md
docs/specs/: backdrop.md  pax-llm.md  pax.md
docs/user/: Animation.mdx  Art-Direction.md  Art-Direction.mdx  Aseprite-Plugin.mdx  Atlas-Packing.md  Atlas-Packing.mdx  Backdrops.mdx  CLI-Reference.md  CLI-Reference.mdx  Composite-Sprites.md  Composite-Sprites.mdx  Dev-Overview.mdx  Diffusion-Bridge.md  Diffusion-Bridge.mdx  Export-Formats.md  Export-Formats.mdx  Getting-Started.mdx  HTTP-API.md  HTTP-API.mdx  Introduction.md  Introduction.mdx  Knowledge-Base.md  Knowledge-Base.mdx  LoRA-Training.md  LoRA-Training.mdx  MCP-Tools.md  MCP-Tools.mdx  Map-Generation.md  Map-Generation.mdx  PAX-Format.md  PAX-Format.mdx  Sprite-Generation.md  Sprite-Generation.mdx  Studio-AI.md  Studio-AI.mdx  Studio-Drawing.md  Studio-Drawing.mdx  Studio-Tilemaps.md  Studio-Tilemaps.mdx  Studio.md  (+9 more)
output/: adventure_tileset.pax
playground/: index.html
playground/themes/: gameboy.pax  nes.pax  sci_fi.pax
plugins/aseprite/: build.sh  package.json  plugin.lua
studio/: README.md  pubspec.yaml
tool/: Cargo.toml
tool/corpus/: 000_001_complete.pax  000_001_complete_training.json  000_003_complete.pax  000_003_complete_training.json  001_001_complete.pax  001_001_complete_training.json  001_003_complete.pax  001_003_complete_training.json  001_004_complete.pax  001_004_complete_training.json  001_005_complete.pax  001_005_complete_training.json  002_001_complete.pax  002_001_complete_training.json  002_002_complete.pax  002_002_complete_training.json  003_001_complete.pax  003_001_complete_training.json  004_001_complete.pax  004_001_complete_training.json  005_001_complete.pax  005_001_complete_training.json  005_012_complete.pax  005_012_complete_training.json  013_001_complete.pax  013_001_complete_training.json  014_001_complete.pax  014_001_complete_training.json  Items.pax  Items_training.json  Monsters.pax  Monsters_training.json  beings.pax  beings_training.json  player.pax  player_training.json  terrain.pax  terrain_training.json  tiles.pax  tiles_training.json
tool/crates/pixl-cli/: Cargo.toml
tool/crates/pixl-cli/src/: main.rs
tool/crates/pixl-core/: Cargo.toml  README.md
tool/crates/pixl-core/src/: animate.rs  blueprint.rs  completeness.rs  compose.rs  composite.rs  corpus.rs  cycle.rs  edges.rs  feedback.rs  grid.rs  knowledge.rs  lib.rs  oklab.rs  parser.rs  prepare.rs  project.rs  resolve.rs  rle.rs  rotate.rs  skeleton.rs  stampgen.rs  structural.rs  style.rs  symmetry.rs  template.rs  theme.rs  tilemap.rs  types.rs  upscale.rs  validate.rs  vary.rs  wang.rs
tool/crates/pixl-core/src/paxl/: bpe.rs  deserialize.rs  encoding.rs  error.rs  mod.rs  serialize.rs
tool/crates/pixl-export/: Cargo.toml
tool/crates/pixl-export/src/: gbstudio.rs  godot.rs  lib.rs  texturepacker.rs  tiled.rs  unity.rs
tool/crates/pixl-mcp/: Cargo.toml
tool/crates/pixl-mcp/src/: adapters.rs  diffusion.rs  handlers.rs  http.rs  inference.rs  lib.rs  server.rs  state.rs  tools.rs
tool/crates/pixl-render/: Cargo.toml
tool/crates/pixl-render/src/: animation.rs  atlas.rs  backdrop.rs  composite.rs  gif.rs  import.rs  lib.rs  palette_lut.rs  pixelize.rs  preview.rs  renderer.rs  scan.rs  spritesheet.rs
tool/crates/pixl-wasm/: Cargo.toml
tool/crates/pixl-wasm/src/: lib.rs
tool/crates/pixl-wfc/: Cargo.toml
tool/crates/pixl-wfc/src/: adjacency.rs  autotile.rs  backtrack.rs  dual_grid.rs  lib.rs  narrate.rs  semantic.rs  wfc.rs
tool/examples/: animated_hero.pax  dungeon.pax  gameboy.pax  platformer.pax
tool/knowledge/: pixel-art-lighting-shading-color.md  pixel-art-materials-guide.md
tool/scripts/: animate_water.py  bump_version.sh  generate_eotb_walls.py  pixelize.py  train_tiles.py
tool/tests/paxl/: README.md
tool/tests/paxl/invalid/: delta_chain.paxl  missing_rows.paxl  row_ref_forward.paxl  unknown_directive.paxl
tool/tests/paxl/roundtrip/: dungeon.paxl  pax21_features.pax
tool/themes/: dark_fantasy.pax  gameboy.pax  gba.pax  light_fantasy.pax  nature.pax  nes.pax  sci_fi.pax  snes.pax
training/: generate_map.py  ingest_cytopia.py  lora_config.yaml  lora_config_mapgen.yaml  map_elites.py  me_features.py  prepare_cytopia.py  prepare_data.py  prepare_eotb.py  prepare_eotb_optimal.py  prepare_matched.py  prepare_me_data.py  test_generate.py  train.py  train.sh  train_eotb.py  train_matched.sh  train_me.py  train_me.sh  train_runner.py  train_v3.sh
(+83 files in other folders)
