[workspace]
resolver = "2"
members = [
    "crates/pixl-core",
    "crates/pixl-render",
    "crates/pixl-wfc",
    "crates/pixl-mcp",
    "crates/pixl-export",
    "crates/pixl-cli",
]
exclude = [
    "crates/pixl-wasm",  # built separately with wasm-pack
]

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Lisa <lisa@tastehub.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SimplyLiz/PIXL"
description = "PIXL — LLM-native pixel art toolchain"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Hashing
fnv = "1.0"              # FNV-1a for edge classification (DefaultHasher uses SipHash, not FNV)

# Search
bm25 = "2.3"             # In-memory BM25 search engine for knowledge retrieval

# Error handling
thiserror = "2"

# Image
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
base64 = "0.22"

# WFC
rand = "0.9"
fixedbitset = "0.5"

# MCP
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Internal crates
pixl-core = { path = "crates/pixl-core" }
pixl-render = { path = "crates/pixl-render" }
pixl-wfc = { path = "crates/pixl-wfc" }
pixl-mcp = { path = "crates/pixl-mcp" }
pixl-export = { path = "crates/pixl-export" }
