[package]
name = "pixl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PIXL core format types, parser, and validator"
readme = "README.md"
repository.workspace = true
keywords = ["pixel-art", "tileset", "pax", "gamedev", "llm"]
categories = ["game-development", "parser-implementations"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
fnv = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
bm25 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
