[package]
name = "pixl-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PIXL pixel renderer — tiles, atlases, GIF animation"

[dependencies]
pixl-core = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gif = "0.14"

[dev-dependencies]
pretty_assertions = "1"
