[package]
name = "pixl-wasm"
version = "2.0.0"
edition = "2024"
description = "PIXL WebAssembly bindings for browser playground"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pixl-core = { path = "../pixl-core" }
pixl-render = { path = "../pixl-render" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
base64 = "0.22"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[profile.release]
opt-level = "s"
lto = true
